# clean-coding

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yaml
config/: main.yaml
megascale/data_processing/: encoding.py  environment.py  one_hot_encoding.py  preprocessing.py  split.py  z_scales_encoding.py
megascale/ml/: metrics.py  metrics_impl.py  model.py  training.py
tests/data_processing/: test_encoding.py  test_environment.py  test_preprocessing.py  test_split.py  test_z_scales_encoding.py
tests/ml/: test_training.py
