[project]
name = "clean-coding"
version = "0.1.0"
description = "description"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.12.6",
    "hydra-core>=1.3.2",
    "jaxlib>=0.10.0",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
